# robotcraft-pathfinding-stage

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
include/: local_planner.h  map_saver.h  wall_follower.h
launch/: global_planner.launch  local_planner.launch  maze_basic.launch  maze_pro.launch
scans/: map.pgm  map_backup.pgm  map_filtered.pgm  map_matrix.txt  path_route.txt  rob_pos_backup.txt  robot_position.txt
src/: astar.py  capture_key.cpp  global_planner.py  goto_controller.py  local_planner.cpp  map_loader.py  map_saver.cpp  path_finder.py  pid_tuner.py  wall_follower.cpp
